# icemage

./: .cirrus.yml  .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMMANDS.md  CONTRIBUTING.md  LICENSE  NOTICE  PROGRESS.md  README.md  SECURITY.md  build.ps1  build.sh  session-log.md
.claude/: mcp.json  settings.json
.claude/auto-memory/: config.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-multi-platform.yml  build.yml  cflite_pr.yml  ci.yml  codeql.yml  fuzzing.yml  release-sign.yml  scorecard.yml  win-ctest.yml
assets/: gen_icon.py
bench/: recall_scenarios.txt
docs/plans/: 2026-05-06-icmg-design.md  2026-05-06-phase-01-core-foundation.md  2026-05-06-phase-02-icm-memory.md  2026-05-06-phase-03-graph-scanner.md  2026-05-06-phase-04-file-watcher.md  2026-05-06-phase-05-rtk-filter.md  2026-05-06-phase-06-rules.md  2026-05-06-phase-07-structured-data.md  2026-05-06-phase-08-multi-project.md  2026-05-06-phase-09-abbreviation.md  2026-05-06-phase-10-stored-procedures.md  2026-05-06-phase-11-import.md  2026-05-06-phase-12-visual-graph.md  2026-05-06-phase-13-mcp-server.md  2026-05-06-phase-14-integration-testing.md  2026-05-07-phase-17-zones.md  2026-05-07-phase-18-symbol-nodes.md  2026-05-07-phase-19-context-bundles.md  2026-05-07-phase-20-output-compression.md  2026-05-07-phase-21-advanced.md  2026-05-07-phase-22-workflow-integration.md  2026-05-08-phase-23-semantic-agent.md  2026-05-10-phase-39-compress.md  2026-05-12-phase-82-multi-language.md
embed/: icmg_embedder.py
examples/hooks/: README.md  icmg-bash-rewrite.sh  icmg-cap-output.sh  icmg-known-issue-recall.sh  icmg-shrink-read.sh  precompact_snapshot.py
examples/wasm-skills/: README.md  redact-digits.skill.json  redact-digits.wat  uppercase.skill.json  uppercase.wat
fuzz/: fuzz_context_budget.cpp  fuzz_markdown_parser.cpp
migrations/: 0001_initial_schema.sql  0002_graph_amendments.sql  0003_rtk_commands_budget.sql  0004_rules_partial_unique.sql  0005_graph_group_id.sql  0006_zones.sql  0007_symbol_nodes.sql  0008_workflow.sql  0009_token_budget.sql  0010_embeddings.sql  0011_templates.sql  0012_feedback.sql  0013_compression_glossary.sql  0014_thinking_telemetry.sql  0015_tool_call_cache.sql  0016_fetch_cache.sql  0017_image_cache.sql  0018_user_identity.sql  0019_sync_tracking.sql  0020_token_receipts.sql  0023_git_sha.sql  0024_receipt_raw_tokens.sql  0025_context_nodes.sql  0026_rule_trial.sql  0027_memory_seen_per_session.sql  0028_skill_chunks.sql  0029_focus_chain.sql  0030_icmgrules.sql  0031_token_counts.sql  0032_approaches.sql  0033_feedbacks_loop.sql  0034_transcripts_fts5.sql  0035_style_patterns.sql  0036_port_bundles.sql  0037_write_compressions.sql  0038_memory_atoms.sql  0039_graph_fts.sql  0040_working_set_snapshot.sql  0041_memory_source.sql
migrations/global/: 0001_projects_table.sql  0002_cron_jobs.sql  0027_rule_violations.sql  0028_intent_cache.sql  0029_amnesia_events.sql  0030_drift_corrections.sql  0031_user_personas.sql  0032_local_llm_chats.sql  0033_recall_cache_persist.sql  0034_agent_leases.sql
multimodal/: icmg_ingest.py
scripts/: backup-src.ps1  bump-version.ps1  gen-vulkan-lib.bat  icmg-shell.sh  install.ps1  install.sh  msvc-build-full.bat  msvc-build-test.bat  msvc-build-v155.bat  msvc-config-full.bat  msvc-shell.bat  pack-win-msvc.ps1  patch-b3.py  patch-c2-lru.py  release-linux-fast.sh  release-linux.sh  release-v1.1.1.sh  release-win.ps1  setup-wsl-native.sh
scripts/legacy/: gen-onnxruntime-lib.bat  msvc-build.bat  msvc-config.bat  pack-win.ps1
src/: exec_client.c  icmg.exe.manifest  icmg.rc  launcher.c  main.cpp
src/abbreviation/: abbr_store.cpp  abbr_store.hpp  abbreviation.hpp
src/cli/: agent_complexity.hpp  agent_local.hpp  agent_model.hpp  agent_persona_policy.hpp  agent_task.hpp  auto_rule.hpp  auto_zone.hpp  base_command.hpp  batch_builder.cpp  batch_builder.hpp  bench_savings.hpp  bisect_logic.hpp  cache_emitter.cpp  cache_emitter.hpp  context_budget.hpp  defender_decision.hpp  dense_summary.hpp  discipline_score.hpp  dispatcher.cpp  dispatcher.hpp  drive_dialog_match.hpp  find_slices.hpp  llm_list_json.hpp  mine_logic.hpp  model_pricing.hpp  pack_delta.hpp  persona_surface.hpp  presence_hook.hpp  quick_store_helpers.hpp  recall_gate.hpp  recall_json.hpp  ref_registry.cpp  ref_registry.hpp  registry_docs.hpp  resume_helpers.hpp  ritual_gate.hpp  router.cpp  router.hpp  run_args.hpp  sayless_migrate.hpp  (+8 more)
src/compress/: compressor.cpp  compressor.hpp  glossary_store.cpp  glossary_store.hpp  template_engine.cpp  template_engine.hpp  write_expander.cpp  write_expander.hpp
src/core/: agent_lease.hpp  api_spec.hpp  audit_log.cpp  audit_log.hpp  bpe_tokenizer.cpp  bpe_tokenizer.hpp  cache_metrics.hpp  cmd_bigram.cpp  cmd_bigram.hpp  cmd_densify.hpp  command_suggest.hpp  comms_archive.cpp  comms_archive.hpp  compact_advisor.hpp  compress_select.hpp  config.cpp  config.hpp  context_node.hpp  context_node_store.cpp  context_node_store.hpp  crash_hint.hpp  cron_store.cpp  cron_store.hpp  cross_turn_dedup.hpp  db.cpp  db.hpp  db_key.cpp  db_key.hpp  diminishing_returns.hpp  dll_probe.hpp  dll_trace.hpp  embedded_migrations.hpp  event_bus.hpp  exec_context.cpp  exec_context.hpp  exec_protocol.hpp  exec_server.cpp  exec_server.hpp  exec_utils.cpp  exec_utils.hpp  (+123 more)
src/daemon/: rule_daemon.cpp  rule_daemon.hpp  rule_daemon_client.cpp  rule_daemon_client.hpp
src/data/: data_store.cpp  data_store.hpp  structured_data.hpp
src/embed/: backend_scorer.hpp  embed_store.cpp  embed_store.hpp  embedder.hpp  embedder_common.cpp  embedder_onnx.cpp  embedder_onnx_stub.cpp  embedder_python.cpp  wordpiece_tokenizer.cpp  (+1 more)
src/icm/: scorer.cpp  (+4 more)
tests/: mono_main.cpp  run_all.sh  test_features.sh  test_graph.sh  test_icm.sh  test_main.hpp  test_mcp.sh  test_performance.sh  test_phase23.sh  test_rtk.sh  test_security.sh  test_tkil.sh
(+713 files in other folders)
